# craft-ai-client-c

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt  craftai.c  craftai.h
tests/src/: CMakeLists.txt  dot_env.h  test_client_init_teardown_config.c  test_create_agent.c  test_create_client.c  unit_tests.h
